feat: add postCSS Extended README.md

--- a/weui/weui_demo/test.html
+++ b/weui/weui_demo/test.html
@@ -65,7 +65,7 @@
 
 
 
-<div class="weui-button__submit">button</div>
+<button class="weui-button__submit weui-submit__btn">button</button>
 
 
 </body>
